--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,61 +1,32 @@
-name: Docker PostGIS CI
+name: build
 
 on:
   push:
-  pull_request:
-  schedule:
-    - cron: '15 5 * * 1'
-
-defaults:
-  run:
-    shell: bash
+      paths-ignore:
+        - '**/*.md'
+        - '.gitignore'
+        - '.dependabot/**'
 
 jobs:
-
-  make-docker-images:
-    strategy:
-      matrix:
-        postgres: [9.6, 10, 11, 12, 13, '14beta2']
-        postgis: ['2.5', '3.1']
-        variant: [default, alpine]
-        exclude:
-          - postgres: 13
-            postgis: '2.5'
-          - postgres: '14beta2'
-            postgis: '2.5'
-        include:
-          - postgres: 12
-            postgis: master
-            variant: default
-          - postgres: 13
-            postgis: master
-            variant: default
-    name: Build docker image for ${{ matrix.postgres }}-${{ matrix.postgis }} variant ${{ matrix.variant }}
-    runs-on: ubuntu-20.04
-    continue-on-error: ${{ matrix.postgis == 'master' }}
-    env:
-      VERSION: ${{ matrix.postgres }}-${{ matrix.postgis }}
-      VARIANT: ${{ matrix.variant }}
-
+  build:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     steps:
-    - name: Checkout source
-      uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Build docker image for ${{ env.VERSION }} ${{ env.VARIANT }}
-      run: make test
+      - name: build dependencies
+        uses: crazy-max/ghaction-docker-buildx@v3
+        with:
+          version: latest
 
-    - name: Login to dockerhub
-      uses: docker/login-action@v1
-      if: ${{  (github.ref == 'refs/heads/master') && (github.event_name != 'pull_request')  }}
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+      - name: docker hub login
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-    - name: Push docker image to dockerhub
-      if: ${{  (github.ref == 'refs/heads/master') && (github.event_name != 'pull_request')  }}
-      env:
-        DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-        DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-        DOCKERHUB_ACCESS_TOKEN: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
-      run: make push
+      - name: build
+        run: |
+          cd 12-3.1
+          docker buildx build \
+            --push \
+            --tag robertbeal/postgis:12 \
+            --platform linux/arm64/v8 .
 
